Bugfix to allow user to change template's choice after already choosing one, without the needing of reloading the page

--- a/IFC-JIRA-STANDARDS/popup.html
+++ b/IFC-JIRA-STANDARDS/popup.html
@@ -5,16 +5,19 @@
 		<title>IFC JIRA Templates para comentarios de tasks</title>
 		<script src="jquery-3.2.1.min.js"></script>
 		<script src="popup.js"></script>
-		<script src="jscolor.min.js"></script>
 		<style>
 			body {
 				min-width: 250px;
 				min-height: 150px;
 			}
+			.title {
+				color: orange;
+			}
 		</style>
 	</head>
 	<body>
-		<p>Comentar como </p>
+		<h3 class="title">Infracommerce Jira Standards for Developers</h3>
+		<p >Comentar como: </p>
 		<input type="radio" name="templateType" value="developer">Desenvolvedor
 		<input type="radio" name="templateType" value="tester">Testador
 		<br />
